src/test/deca/context/valid/ContextAvecObjet/This/thisFieldinMethod.deca
//Description
//  Appel à this.field dans une méthode
//
//Réponse
//  ok

class A{
    int x;
    void setX(int x){
        this.x = this.x + x;
    }
}