src/test/deca/context/invalid/ContextAvecObjet/DeclMeth/voidParam.deca
//Description
//  paramètre de type void dans une méthode
//
//Réponse
// Erreur contextuelle ligne 8
//  un paramètre ne peut pas ètre de type void
class A{
    void test(void v){}
}